# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# Resolve rules_cc Starlark libraries to their correct targets
# gazelle:resolve starlark @rules_cc//cc/common:cc_info.bzl @rules_cc//cc/common:common
# gazelle:resolve starlark @rules_cc//cc/common:cc_common.bzl @rules_cc//cc/common:common

# Resolve protobuf Starlark libraries
# gazelle:resolve starlark @com_google_protobuf//bazel:py_proto_library.bzl @com_google_protobuf//bazel:py_proto_library_bzl

# Resolve bazel_tools repo rules to our internal wrapper to avoid transitive dependencies
# gazelle:resolve starlark @bazel_tools//tools/build_defs/repo:http.bzl //python/private:bazel_tools
# gazelle:resolve starlark @bazel_tools//tools/build_defs/repo:utils.bzl //python/private:bazel_tools

# Prevent Gazelle from incorrectly stripping the .bzl suffix from the toml.bzl repo name
# gazelle:resolve starlark @toml.bzl//:toml.bzl @toml.bzl//:toml

# Override Gazelle's incorrect default resolution for platforms host constraints Starlark library
# gazelle:resolve starlark @platforms//host:constraints.bzl @platforms//host:constraints_lib

# Override Gazelle's incorrect default resolution for rules_cc Starlark libraries
# gazelle:resolve starlark @rules_cc//cc:cc_import.bzl @rules_cc//cc:core_rules
# gazelle:resolve starlark @rules_cc//cc:cc_library.bzl @rules_cc//cc:core_rules

# Exclude directories that are separate packages/workspaces or only for testing/examples
# gazelle:exclude tests
# gazelle:exclude examples

# Exclude internal development tools and dependencies that users don't need
# gazelle:exclude internal_dev_setup.bzl
# gazelle:exclude internal_dev_deps.bzl
# gazelle:exclude python/private/internal_dev_deps.bzl
# gazelle:exclude workspace_bazel9.bzl

# Exclude legacy paths that are only kept for backwards compatibility
# gazelle:exclude python/private/common

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files([
    "LICENSE",
    "version.bzl",
])

exports_files(
    [".bazelversion"],
    visibility = ["//tests:__subpackages__"],
)

exports_files(
    glob(["*.md"]),
    visibility = ["//docs:__subpackages__"],
)

filegroup(
    name = "distribution",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "WORKSPACE",
        "WORKSPACE.bzlmod",
        "internal_dev_deps.bzl",
        "internal_dev_setup.bzl",
        "version.bzl",
        "//command_line_option:distribution",
        "//python:distribution",
        "//tools:distribution",
    ],
    visibility = [
        "//:__subpackages__",
    ],
)

# Reexport of all bzl files used to allow downstream rules to generate docs
# without shipping with a dependency on Skylib
filegroup(
    name = "bzl",
    srcs = [
        "//python/pip_install:bzl",
        "//python:bzl",
        # Requires Bazel 0.29 onward for public visibility of these .bzl files.
        "@bazel_tools//tools/python:python_version.bzl",
        "@bazel_tools//tools/python:srcs_version.bzl",
        "@bazel_tools//tools/python:toolchain.bzl",
        "@bazel_tools//tools/python:utils.bzl",
    ],
    visibility = ["//visibility:public"],
)

# keep
bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//:__subpackages__"],
)

# No-op change to verify PR metadata checks
