module(
    name = "bazel_worker",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "protobuf", version = "29.0-rc2", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_python", version = "1.8.5")
local_path_override(
    module_name = "rules_python",
    path = "..",
)
