load("//python/uv:lock.bzl", "lock")  # buildifier: disable=bzl-visibility

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])  # Apache 2.0

# Run bazel run //dev:requirements.update
lock(
    name = "requirements",
    srcs = ["pyproject.toml"],
    out = "requirements.txt",
    args = [
        "--emit-index-url",
        "--universal",
        "--upgrade",
    ],
    # NOTE @aignas 2025-08-17: here we select the lowest actively supported version so that the
    # requirements file is generated to be compatible with Python version 3.9 or greater.
    python_version = "3.9",
    visibility = ["//:__subpackages__"],
)

# Run bazel run //dev:uv_lock.update
lock(
    name = "uv_lock",
    srcs = ["pyproject.toml"],
    out = "uv.lock",
    python_version = "3.9",
    visibility = ["//:__subpackages__"],
)
