load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# Gazelle configuration options.
# See https://github.com/bazelbuild/bazel-gazelle#running-gazelle-with-bazel
# gazelle:prefix github.com/bazel-contrib/rules_python/gazelle
# gazelle:exclude bazel-out
# gazelle:exclude deps.bzl
# gazelle:exclude internal_dev_deps.bzl
gazelle(
    name = "gazelle",
)

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_deps",
        "-prune",
    ],
    command = "update-repos",
)

filegroup(
    name = "distribution",
    srcs = [
        ":BUILD.bazel",
        ":MODULE.bazel",
        ":README.md",
        ":WORKSPACE",
        ":def.bzl",
        ":deps.bzl",
        ":go.mod",
        ":go.sum",
        "//manifest:distribution",
        "//modules_mapping:distribution",
        "//python:distribution",
        "//pythonconfig:distribution",
    ],
    visibility = ["@rules_python//:__pkg__"],
)

bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//visibility:public"],
)
