load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":defs.bzl", "rel_symlink")

rel_symlink(
    name = "my_symlink",
    target_path = "../subrepo/data.txt",
)

py_test(
    name = "test",
    srcs = ["test.py"],
    data = [":my_symlink"],
    deps = ["@rules_python//python/runfiles"],
)

sh_test(
    name = "windows_test",
    srcs = [
        "test.sh",
    ],
    data = [
        "check_link.ps1",
        ":my_symlink",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
