load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_uv//uv:pip.bzl", "pip_compile")

pip_compile(
    name = "generate_requirements_txt",
    requirements_in = "//:requirements.in",  # default
    requirements_txt = "//:requirements.txt",  # default
)

py_binary(
    name = "bin",
    srcs = ["bin.py"],
    deps = [
        "@pip//argparse",
        "@pip//build",
        "@pip//toml",
    ],
)
