load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

exports_files([
    # This gets wrapped up into a py_binary with args inside of the gazelle_python_manifest macro.
    "copy_to_source.py",
])

go_library(
    name = "manifest",
    srcs = ["manifest.go"],
    importpath = "github.com/bazel-contrib/rules_python/gazelle/manifest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_emirpasic_gods//sets/treeset:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "manifest_test",
    srcs = ["manifest_test.go"],
    data = glob(["testdata/**"]),
    deps = [":manifest"],
)

filegroup(
    name = "distribution",
    srcs = glob(["**"]) + [
        "//manifest/generate:distribution",
        "//manifest/hasher:distribution",
        "//manifest/test:distribution",
    ],
    visibility = ["//:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//rules:diff_test",
        "@io_bazel_rules_go//go:def",
        "@rules_python//python:defs_bzl",
    ],
)
