load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "distribution",
    srcs = glob(["**"]),
)

bzl_library(
    name = "repos",
    srcs = ["repos.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//python/private:local_runtime_repo",
        "//python/private:local_runtime_toolchains_repo",
    ],
)

alias(
    name = "repos_bzl",
    actual = ":repos",
    deprecation = "Use //python/local_toolchains:repos instead",
    visibility = ["//visibility:public"],
)
